--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,60 @@
-h1 {
-	font-weight: 400;
-	height: 5%;
-}
 #familytree {
+/*
 	margin: 	0 auto;
-	text-align: center;
+*/
+	text-align: left;
 	z-index: 10;
+/*
+	width:630px;
+	overflow:auto;
+*/
+	border:0px solid blue;
 }
 #focusperson {
-/*	font-family: Consolas, Monaco, "Lucida Console", monospace; */
 	height: 2em;
-/*	margin: 10px; */
 	padding: 0;
 	width: 40%;
-}
-#go {
-	font-size: 2em;
-	display:none;
 }
 #hoverimage {
 	position : absolute;
 	border : 1px solid gray;
 	background-color : #efefef;
-/*	padding : 3px; */
 	z-index: 100;
 	/* set this to create word wrap */
 	/* max-width: 200px;*/
 }
 
-#buttons {
-	display:none;
+#tree-container {
+	border:0px solid black;
+	width:630px;
+	overflow:auto;
+	text-align:left;
+}
+#toolbar-container {
+	position: relative;
+/*
+	overflow:auto;
+	width:630px;
+	background-color:#666;
+*/
+}
+
+.toolbar {
+	border:0px solid blue;
+}
+
+.dynamicDiv {
+    border:solid 1px #c0c0c0;
+    background-color:#e1e1e1;
+    font-size:8px;
+    font-family:verdana;
+    color:#000;
+    padding:0px;
+}
+
+
+img.toolbar-treenav {
+	
+}
+img.toolbar-blogpage {
 }
