Various additions and fixes..
git-svn-id: https://plugins.svn.wordpress.org/wp-family-tree/trunk@365298 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,27 @@
 
 .toolbar {
 	border:0px solid blue;
+	z-index:20;
+	position:absolute;
+	top:0;
+	left:0;
+	width:70px;
+	height:20px;
 }
+.toolbar a {
+	padding:0;
+	margin:0;
+}
+.toolbar a img {
+	padding:0;
+	margin:0;
+}
+img.toolbar-treenav {
+	
+}
+img.toolbar-blogpage {
+}
+
 
 .dynamicDiv {
     border:solid 1px #c0c0c0;
@@ -53,8 +73,3 @@
 }
 
 
-img.toolbar-treenav {
-	
-}
-img.toolbar-blogpage {
-}
