- minor css fix (thumbnails)
git-svn-id: https://plugins.svn.wordpress.org/wp-family-tree/trunk@766587 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ img.toolbar-blogpage {
 	position: relative;
 }
 
-.thumbnail {
+.wpft_thumbnail {
 	border:0px solid blue;
 	z-index:20;
 	position:absolute;
